--- a/appFormation/src/app/core/components/navbar/navbar.component.html
+++ b/appFormation/src/app/core/components/navbar/navbar.component.html
@@ -1,1 +1,11 @@
-<p>navbar works!</p>
+<ul class="nav flex-column">
+  <li class="nav-item">
+    <a clas="nav-link" href="#">Home</a>
+  </li>
+  <li class="nav-item">
+    <a clas="nav-link" href="#">Orders</a>
+  </li>
+  <li class="nav-item">
+    <a clas="nav-link" href="#">Clients</a>
+  </li>
+</ul>
