--- a/appFormation/src/app/app.component.html
+++ b/appFormation/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-content></app-content>
+<app-content>
+  <app-header></app-header>
+  <app-navbar></app-navbar>
+  <app-footer></app-footer>
+</app-content>
