--- a/appFormation/src/app/ui/content/content.component.html
+++ b/appFormation/src/app/ui/content/content.component.html
@@ -1,6 +1,6 @@
 <header class="fixed-top">
   <app-icon-nav (click)="switch()"></app-icon-nav>
-  header
+  <ng-content select="app-header"></ng-content>
 </header>
 
 <main [ngClass]="{'close-aside': !open}">
@@ -10,7 +10,7 @@
 
   <aside>
     <div class="scroller">
-      navigation
+      <ng-content select="app-navbar"></ng-content>
     </div>
   </aside>
 
@@ -21,7 +21,7 @@
     </div>
 
     <footer>
-      footer
+      <ng-content select="app-footer"></ng-content>
     </footer>
 
   </div>
