Ajout de log et de tool de debug

--- a/appFormation/src/app/core/components/navbar/navbar.component.html
+++ b/appFormation/src/app/core/components/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <ul class="nav flex-column">
   <li class="nav-item">
-    <a clas="nav-link" href="#">Home</a>
+    <a clas="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
   </li>
   <li class="nav-item">
-    <a clas="nav-link" href="#">Orders</a>
+    <a clas="nav-link" routerLink="/orders" routerLinkActive="active">Orders</a>
   </li>
   <li class="nav-item">
-    <a clas="nav-link" href="#">Clients</a>
+    <a clas="nav-link" routerLink="/clients" routerLinkActive="active">Clients</a>
   </li>
 </ul>
