--- a/appFormation/src/app/ui/content/content.component.html
+++ b/appFormation/src/app/ui/content/content.component.html
@@ -17,7 +17,7 @@
   <div class="page">
 
     <div class="contents">
-      contenus
+      <ng-content select=".content"></ng-content>
     </div>
 
     <footer>
