--- a/appFormation/src/app/app.component.html
+++ b/appFormation/src/app/app.component.html
@@ -2,4 +2,5 @@
   <app-header></app-header>
   <app-navbar></app-navbar>
   <app-footer></app-footer>
+  <router-outlet class="content"></router-outlet>
 </app-content>
