Ajout d'un template de tableau et utilisation de ce tableau pour clients et orders

--- a/appFormation/src/app/views/clients/pages/page-list-client/page-list-client.component.html
+++ b/appFormation/src/app/views/clients/pages/page-list-client/page-list-client.component.html
@@ -1,1 +1,5 @@
-<p>{{ title }}</p>
+<app-table-light *ngIf="collectionClient"
+  [collectionC]="collectionClient"
+  [headers]="collectionHeaders">
+</app-table-light>
+
