--- a/appFormation/src/app/views/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/appFormation/src/app/views/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,1 +1,4 @@
-<p>page-list-orders works!</p>
+<app-table-light *ngIf="collectionOrder"
+  [collection]="collectionOrder"
+  [headers]="collectionHeaders">
+</app-table-light>
