utilisation de la projection pour les tableaux

--- a/appFormation/src/app/templates/table-light/table-light.component.html
+++ b/appFormation/src/app/templates/table-light/table-light.component.html
@@ -1,34 +1,10 @@
-<!-- <p>{{ headers | json }}</p>
-<p>{{ collection | json }}</p> -->
-
 <table class="table">
   <thead>
     <tr>
       <th *ngFor="let h of headers">{{ h }}</th>
     </tr>
   </thead>
-  <tbody *ngIf="collection">
-    <tr *ngFor="let c of collection">
-      <td>{{ c.typePresta }}</td>
-      <td>{{ c.client }}</td>
-      <td>{{ c.nbJours | jour }}</td>
-      <td>{{ c.tjmHT }}</td>
-      <td>{{ c | total | currency : 'USD' }}</td>
-      <td>{{ c | total: 'TTC' | currency : 'EUR' }}</td>
-      <!-- <td>{{ c.totalHT() | currency : 'EUR' }}</td> -->
-      <!-- <td>{{ c.totalTTC() | currency : 'USD' }}</td> -->
-      <td>{{ c.state }}</td>
-      <td>{{ c.date | date : 'dd-MM-yyyy'}}</td>
-    </tr>
-  </tbody>
-  <tbody *ngIf="collectionC">
-    <tr *ngFor="let c of collectionC">
-      <td>{{ c.state }}</td>
-      <td>{{ c.tva }}</td>
-      <td>{{ c.name }}</td>
-      <td>{{ c.ca }}</td>
-      <td>{{ c.comment }}</td>
-      <td>{{ c.total() }}</td>
-    </tr>
+  <tbody>
+    <ng-content></ng-content>
   </tbody>
 </table>
