--- a/appFormation/src/app/views/clients/pages/page-list-client/page-list-client.component.html
+++ b/appFormation/src/app/views/clients/pages/page-list-client/page-list-client.component.html
@@ -1,5 +1,13 @@
 <app-table-light *ngIf="collectionClient"
-  [collectionC]="collectionClient"
   [headers]="collectionHeaders">
+
+  <tr *ngFor="let c of collectionClient">
+    <td>{{ c.state }}</td>
+    <td>{{ c.tva }}</td>
+    <td>{{ c.name }}</td>
+    <td>{{ c.ca }}</td>
+    <td>{{ c.comment }}</td>
+    <td>{{ c.total() }}</td>
+  </tr>
 </app-table-light>
 
