--- a/appFormation/src/app/views/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/appFormation/src/app/views/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,4 +1,17 @@
 <app-table-light *ngIf="collectionOrder"
-  [collection]="collectionOrder"
   [headers]="collectionHeaders">
+
+<tr *ngFor="let c of collectionOrder">
+  <td>{{ c.typePresta }}</td>
+  <td>{{ c.client }}</td>
+  <td>{{ c.nbJours | jour }}</td>
+  <td>{{ c.tjmHT }}</td>
+  <td>{{ c | total | currency : 'USD' }}</td>
+  <td>{{ c | total: 'TTC' | currency : 'EUR' }}</td>
+  <td>{{ c.totalHT() | currency : 'EUR' }}</td> -->
+  <td>{{ c.totalTTC() | currency : 'USD' }}</td>
+  <td>{{ c.state }}</td>
+  <td>{{ c.date | date : 'dd-MM-yyyy'}}</td>
+</tr>
+
 </app-table-light>
