--- a/appFormation/src/app/views/clients/pages/page-list-client/page-list-client.component.html
+++ b/appFormation/src/app/views/clients/pages/page-list-client/page-list-client.component.html
@@ -1,4 +1,4 @@
-<app-table-light *ngIf="collectionClient"
+<app-table-dark *ngIf="collectionClient"
   [headers]="collectionHeaders">
 
   <tr *ngFor="let c of collectionClient">
@@ -15,7 +15,7 @@
     <td>{{ c.comment }}</td>
     <td>{{ c.total() }}</td>
   </tr>
-</app-table-light>
+</app-table-dark>
 
 
 <app-btn [label]= "btnRoute.label" [route]= "btnRoute.route"></app-btn>
