Ajout de titre et de global text

--- a/appFormation/src/app/views/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/appFormation/src/app/views/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,3 +1,4 @@
+<app-titre-a [title]="title" [subtitle]="subtitle">
 <app-table-light *ngIf="collectionOrderObservable | async as collection"
   [headers]="collectionHeaders">
 
@@ -24,3 +25,5 @@
 <app-btn [label]= "btnRoute.label" [route]= "btnRoute.route"></app-btn>
 <app-btn [label]= "btnHref.label" [href]= "btnHref.href"></app-btn>
 <app-btn [label]= "btnAction.label" [action]= "btnAction.action" (clicked)="openPopup()"></app-btn>
+
+</app-titre-a>
