--- a/appFormation/src/app/shared/components/btn/btn.component.scss
+++ b/appFormation/src/app/shared/components/btn/btn.component.scss
@@ -15,3 +15,23 @@ a, button {
     background: darken($color3, 10);
   }
 }
+
+:host-context(app-titre-a){
+  a, button {
+    background: $color1;
+  }
+  &:hover {
+    text-decoration: none;
+    background: darken($color1, 10);
+  }
+}
+
+:host-context(app-titre-b){
+  a, button {
+    background: $color2;
+  }
+  &:hover {
+    text-decoration: none;
+    background: darken($color2, 10);
+  }
+}
