--- a/appFormation/src/app/views/clients/pages/page-list-client/page-list-client.component.html
+++ b/appFormation/src/app/views/clients/pages/page-list-client/page-list-client.component.html
@@ -1,3 +1,4 @@
+<app-titre-b [title]="a" [subtitle]="b">
 <app-table-dark *ngIf="collectionClientObservable | async as collection"
   [headers]="collectionHeaders">
 
@@ -15,10 +16,11 @@
     <td>{{ c.comment }}</td>
     <td>{{ c.total() }}</td>
   </tr>
+
 </app-table-dark>
-
-
 <app-btn [label]= "btnRoute.label" [route]= "btnRoute.route"></app-btn>
 <app-btn [label]= "btnFilter.label" [action]= "btnFilter.action" (clicked)="filterByCA(100000)">
   <app-icon-filter></app-icon-filter>
 </app-btn>
+</app-titre-b>
+
