Ajout du global text et de regles sur les titre

--- a/appFormation/src/app/templates/titre-b/titre-b.component.html
+++ b/appFormation/src/app/templates/titre-b/titre-b.component.html
@@ -1,4 +1,4 @@
-<app-global-text [booleanPage]="true">
+<app-global-text [booleanPage]="true" [titreClient]="true">
 <div>
   <h1> {{ title }}</h1>
   <h2>{{ subtitle }}</h2>
