--- a/appFormation/src/app/texts/global-text/global-text.component.scss
+++ b/appFormation/src/app/texts/global-text/global-text.component.scss
@@ -31,3 +31,12 @@ h3 {
 p, span, i, li {
   font-size: $regular-fz;
 }
+
+.titre-client {
+  h1 {
+    font-weight: bold;
+  }
+  h2{
+    font-style: italic;
+  }
+}
