--- a/appFormation/src/app/texts/global-text/global-text.component.html
+++ b/appFormation/src/app/texts/global-text/global-text.component.html
@@ -1,3 +1,3 @@
-<div [ngClass]="{'pages': booleanPage}">
+<div [ngClass]="{'pages': booleanPage, 'titre-client' : titreClient}">
   <ng-content></ng-content>
 </div>
