--- a/appFormation/src/app/views/clients/components/form-add-client/form-add-client.component.html
+++ b/appFormation/src/app/views/clients/components/form-add-client/form-add-client.component.html
@@ -4,6 +4,12 @@
       <label for="name">Nom</label>
       <input formControlName="name" type="text" class="form-control" id="name">
     </div>
+    <div *ngIf="form.get('name').errors?.required && form.get('name').touched" class="alert alert-danger">
+      Champ vide
+    </div>
+    <div *ngIf="form.get('name').errors?.minlength && form.get('name').touched" class="alert alert-danger">
+      Minimum 10 caractères
+    </div>
     <div class="form-group">
       <label for="ca">CA</label>
       <input formControlName="ca" type="number" class="form-control" id="ca">
