--- a/appFormation/src/app/views/orders/components/form-add-order/form-add-order.component.html
+++ b/appFormation/src/app/views/orders/components/form-add-order/form-add-order.component.html
@@ -4,9 +4,18 @@
       <label for="typePresta">Type Prestation</label>
       <input formControlName="typePresta" type="text" class="form-control" id="typePresta">
     </div>
+    <div *ngIf="form.get('typePresta').invalid && form.get('typePresta').touched" class="alert alert-danger">
+      Champ requis
+    </div>
     <div class="form-group">
       <label for="client">Client</label>
       <input formControlName="client" type="text" class="form-control" id="client">
+    </div>
+    <div *ngIf="form.get('client').errors?.required && form.get('client').touched" class="alert alert-danger">
+      Champ vide
+    </div>
+    <div *ngIf="form.get('client').errors?.minlength && form.get('client').touched" class="alert alert-danger">
+      Minimum 3 caractères
     </div>
     <div class="form-group">
       <label for="nbJours">Nombre de jours</label>
@@ -35,6 +44,6 @@
       </select>
     </div>
 
-    <button type="submit" class="btn btn-primary">Envoyer</button>
+    <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Envoyer</button>
   </form>
 </div>
